deployment/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plank-games-deployment
  labels:
    selector: server-selector
spec:
  replicas: 3
  selector:
    matchLabels:
      selector: server-selector
      version: stable
  template:
    metadata:
      labels:
        selector: server-selector
        version: stable
    spec:
      containers:
        - name: plank-games
          image: jackflowers1/plank-games:v5
          ports:
            - name: http
              containerPort: 4000
            - name: epmd
              containerPort: 4369
