deployment/base/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: plank-games-redis-svc
spec:
  selector:
    selector: redis-selector
  ports:
    - name: redis
      port: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plank-games-redis-deployment
  labels:
    app: redis
    selector: redis-selector
spec:
  replicas: 1
  selector:
    matchLabels:
      selector: redis-selector
  template:
    metadata:
      labels:
        selector: redis-selector
    spec:
      containers:
        - name: redis
          image: redis:latest
          command:
            - redis-server
            - "/redis-master/redis.conf"
          ports:
            - containerPort: 6379
          resources:
            limits:
              cpu: "0.1"
          volumeMounts:
            - mountPath: /redis-master-data
              name: data
            - mountPath: /redis-master
              name: config
      volumes:
        - name: data
          emptyDir: {}
        - name: config
          configMap:
            name: plank-games-redis-config
            items:
              - key: redis-config
                path: redis.conf
