deployment/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plank-games-svc
spec:
  selector:
    app: plank-games
    version: stable
  ports:
    - name: http
      port: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: plank-games-headless-svc
spec:
  clusterIP: None
  selector:
    app: plank-games
    version: stable
  ports:
    - name: epmd
      port: 4369
