deployment/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plank-games-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
        - plank.games
      secretName: plank-games-tls
  rules:
    - host: plank-games.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plank-games-svc
                port:
                  name: http
